# reasoning-model

./: README.md  mcts.py  mcts_node.py  pyproject.toml  reasoning_model.py  test_inference.py  tree_utils.py
evaluate/: evaluate_mgsm.py
